--- a/net.cfg
+++ b/net.cfg
@@ -4,6 +4,7 @@ input_width: 900
 classes_num: 2675
 test_batch_size: 32
 model_load_path: ./model/ckpt
+model_save_path: ./model/ckpt
 
 [train]
 batch_size: 32
